# simple-ralph

./: .gitignore  Cargo.toml  README.md  malformed.json  progress.txt  requirements.txt
.github/workflows/: ci.yml
example/: prd.json  ralph.sh
plans/: completed.json  prd.json
src/: app.rs  claude.rs  main.rs  prd.rs  prompt.rs  tui.rs
src/commands/: build.rs  mod.rs  plan.rs
src/plan/: app.rs  mod.rs  phases.rs  prompts.rs  protocol.rs  session.rs
tests/: cli_integration.rs  prd_workflow.rs  session_workflow.rs
