[package]
name = "simple-ralph"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
pathbuf = "1.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
